syntax = "proto3";

package api.v1;

option go_package = "github.com/Henrod/opentelemetry-example/proto/cat/api/v1";

import "google/api/annotations.proto";

service CatService {
  rpc CreateCat(CreateCatRequest) returns (CreateCatResponse) {
    option (google.api.http) = {
      post: "/v1/cats"
      body: "cat"
    };
  }

  rpc ListCats(ListCatsRequest) returns (ListCatsResponse) {
    option (google.api.http) = {
      get: "/v1/cats"
    };
  }
}

message CreateCatRequest {
  Cat cat = 1;
}

message CreateCatResponse {
  Cat cat = 1;
}

message ListCatsRequest {}

message ListCatsResponse {
  repeated Cat cats = 1;
}

message Cat {
  string id = 1;
  string name = 2;
  string fact = 3;
}
